HireActivity created Hire function developed Accept and Decline function made for hire activity NotificationFragment functionality completed NotificationAdapter functionality completed

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/input_design"
             android:hint="Say some thing about yourself"
-            android:inputType="text"
+            android:inputType="textMultiLine"
             android:padding="6dp"
             android:layout_marginTop="6dp"
             android:layout_marginRight="20dp"
